--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 </head>
 <body>
-<div id="app">
+<div id="app" style="overflow: hidden">
 
 </div>
 </body>
